@@ -23,7 +23,6 @@ public class VerificationEmailService {
     private final ObjectProvider<JavaMailSender> mailSenderProvider;
     private final EmailVerificationProperties verificationProperties;
     private final String frontendBaseUrl;
-    private final String backendBaseUrl;
     private final String mailHost;
     private final String mailUsername;
 
@@ -31,14 +30,12 @@ public class VerificationEmailService {
         ObjectProvider<JavaMailSender> mailSenderProvider,
         EmailVerificationProperties verificationProperties,
         @org.springframework.beans.factory.annotation.Value("${app.frontend-base-url:}") String frontendBaseUrl,
-        @org.springframework.beans.factory.annotation.Value("${app.backend-base-url:}") String backendBaseUrl,
         @org.springframework.beans.factory.annotation.Value("${spring.mail.host:}") String mailHost,
         @org.springframework.beans.factory.annotation.Value("${spring.mail.username:}") String mailUsername
     ) {
         this.mailSenderProvider = mailSenderProvider;
         this.verificationProperties = verificationProperties;
         this.frontendBaseUrl = frontendBaseUrl;
-        this.backendBaseUrl = backendBaseUrl;
         this.mailHost = mailHost;
         this.mailUsername = mailUsername;
     }
@@ -47,10 +44,6 @@ public class VerificationEmailService {
         JavaMailSender mailSender = mailSenderProvider.getIfAvailable();
         String fromAddress = resolveFromAddress();
         String verifyBaseUrl = requirePublicBaseUrl(
-            backendBaseUrl,
-            "BACKEND_BASE_URL must be set to your deployed backend URL before verification emails can be sent."
-        );
-        requirePublicBaseUrl(
             frontendBaseUrl,
             "FRONTEND_BASE_URL must be set to your deployed app URL before verification emails can be sent."
         );
@@ -65,8 +58,9 @@ public class VerificationEmailService {
         String safeName = StringUtils.hasText(name) ? name.trim() : "there";
         String roleLabel = role == Role.NUTRITIONIST ? "nutritionist" : "member";
         String verifyUrl = verifyBaseUrl
-            + "/api/auth/verify-email-link?token="
-            + URLEncoder.encode(token, StandardCharsets.UTF_8);
+            + "/verify-email?token=" + URLEncoder.encode(token, StandardCharsets.UTF_8)
+            + "&email=" + URLEncoder.encode(email, StandardCharsets.UTF_8)
+            + "&role=" + URLEncoder.encode(role.name(), StandardCharsets.UTF_8);
 
         SimpleMailMessage message = new SimpleMailMessage();
         message.setFrom(fromAddress);
